<resources>
    <string name="app_name">PodOasis</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <string name="large_text">To gain a broader understanding of the three psychological regions, we examined the
correlations between the state prototypicality scores and the PESH
indicators. The correlations shown in Table 3 reveal a number of
associations between the clusters and indicators.1 In general, the
patterns of relationships appear to be unique to each cluster and
thus highlight the distinctiveness of the regions.
As can be seen in the first data column of Table 3, states in the
Friendly Conventional region displayed strong negative correlations with all three economic indicators, indicating that this
region is less affluent, has fewer highly educated residents, and is
less innovative compared with states in the other regions. States in
this region also appeared to have higher levels of social capital and
less social tolerance compared with states in other regions. Moreover, Friendly Conventional states were more politically conservative and Protestant compared with other regions. Analyses of
the health indicators suggest that residents of Friendly Conventional states are less healthy and engage in less health-promoting
behavior compared with people who live in other psychological
regions</string>

    <string name="personal_item1">个人主页</string>
    <string name="personal_item2">创作中心</string>
    <string name="personal_item3">浏览历史</string>
    <string name="personal_item4">设置</string>

    <string name="setting_title">设置</string>
    <string name="setting_item1">夜间模式</string>
    <string name="setting_item2">退出登录</string>
    <string name="setting_pwd">修改密码</string>



    <string name="open">打开</string>
    <string name="close">关闭</string>
    <string name="please_input">请输入</string>
    <string name="search">搜索</string>

    <string name="follow_name">关注</string>
    <string name="subscribe_name">订阅</string>
    <string name="listen_total">收听时长</string>
    <string name="edit_avatar">编辑头像</string>

    <string name="subscribe_plus">+订阅</string>

    <string name="dialog_modifypwd">修改密码</string>

    <string name="contribution">我的订阅</string>
    <string name="album_plus">+新建</string>
    <string name="album_del">删除</string>
    <string name="episode_list">播放列表</string>
    <string name="count_subscribe">订阅数: </string>
    <string name="album_title">专栏名</string>
    <string name="album_description">专栏描述</string>
    <string name="album_img">上传专栏图</string>
    <string name="introduction">个人简介</string>
    <string name="introduction_edit">编辑简介</string>
    <string name="upload_avatar">上传头像</string>
    <string name="main_playlist_null">欢迎探索~</string>
    <string name="error">Error</string>

    <string name="title_activity_category">CategoryActivity</string>
    <string name="action_settings">Settings</string>
    <string name="suss">suss</string>


</resources>