<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include layout="@layout/toolbar"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/setting_outlook" />

        <TextView
            android:layout_width="120dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:paddingLeft="30dp"
            android:text="@string/setting_item1"
            android:textSize="24dp" />


        <ImageView
            android:id="@+id/outlook"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:clickable="true"
            android:src="@drawable/goto_right" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/setting_pwd" />

        <TextView
            android:layout_width="120dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:paddingLeft="30dp"
            android:text="@string/setting_pwd"
            android:textSize="24dp" />


        <ImageView
            android:id="@+id/modify_pwd"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:clickable="true"
            android:src="@drawable/goto_right" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:layout_marginTop="20dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:text="@string/setting_item2"
            android:textColor="@color/warning"
            android:textSize="24dp"
            android:clickable="true"/>

    </LinearLayout>



</LinearLayout>