<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include layout="@layout/toolbar"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="222dp">

        <TextView
            android:id="@+id/username"
            android:layout_width="150dp"
            android:layout_height="60dp"
            android:layout_marginLeft="36dp"
            android:layout_marginTop="80dp"
            android:gravity="center"
            android:text=""
            android:textSize="30sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="202dp"
            android:layout_height="212dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/avatar"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:scaleType="centerCrop"
                android:src="@drawable/default_avatar"
                app:shapeAppearanceOverlay="@style/circleStyle" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_avatar"
                android:layout_width="150dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:text="@string/edit_avatar"
                android:textSize="20sp"
                app:cornerRadius="10dp"
                app:icon="@drawable/personal_contribution"
                app:iconSize="16dp" />


        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:id="@+id/Divider1"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_below="@id/recommend"
        android:background="#D3C1E8FF" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <TextView
                android:id="@+id/subscribe_num"
                android:layout_width="133dp"
                android:layout_height="66dp"
                android:layout_marginLeft="160dp"
                android:layout_marginTop="5dp"
                android:text=""
                android:textSize="40sp" />

            <TextView
                android:layout_width="80dp"
                android:layout_height="40dp"
                android:layout_alignParentRight="true"
                android:layout_alignParentBottom="true"
                android:layout_marginRight="299dp"
                android:layout_marginBottom="20dp"
                android:gravity="center"
                android:text="@string/subscribe_name"
                android:textSize="26sp" />

        </RelativeLayout>



<!--        <RelativeLayout-->
<!--            android:layout_width="0dp"-->
<!--            android:layout_height="match_parent"-->
<!--            android:layout_weight="1">-->

<!--            <TextView-->
<!--                android:id="@+id/listen_total"-->
<!--                android:layout_width="80dp"-->
<!--                android:layout_height="50dp"-->
<!--                android:text="0"-->
<!--                android:gravity="end|bottom"-->
<!--                android:textSize="30sp"-->
<!--                />-->

<!--            <TextView-->
<!--                android:layout_width="100dp"-->
<!--                android:layout_height="40dp"-->
<!--                android:layout_alignParentRight="true"-->
<!--                android:layout_alignParentBottom="true"-->
<!--                android:text="@string/listen_total"-->
<!--                android:textSize="20sp"-->
<!--                android:gravity="center"/>-->

<!--        </RelativeLayout>-->
    </LinearLayout>

    <View
        android:id="@+id/Divider2"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_below="@id/recommend"
        android:layout_marginTop="@dimen/dp_10"
        android:background="#D3C1E8FF" />

    <EditText
        android:id="@+id/introduction"
        android:layout_width="match_parent"
        android:layout_marginLeft="10dp"
        android:layout_height="300dp"
        android:gravity="left|top"
        android:hint="@string/introduction"
        android:lineSpacingMultiplier="1.2"
        android:enabled="false"
        >
    </EditText>


    <com.google.android.material.button.MaterialButton
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:id="@+id/introduction_edit"
        android:text="@string/introduction_edit"
        android:textSize="20sp"
        app:icon="@drawable/personal_contribution"
        app:iconSize="20dp"
        app:cornerRadius="10dp"/>




</LinearLayout>