<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="135dp"
        android:background="@drawable/personal_background">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_anchor="@+id/appBarLayout"
            app:layout_anchorGravity="center"
            app:layout_scrollFlags="scroll">

            <TextView
                android:id="@+id/username"
                android:layout_width="150dp"
                android:layout_height="60dp"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="30dp"
                android:gravity="center"
                android:text="Calora"
                android:textSize="30sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/avatar"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="10dp"
                android:scaleType="centerCrop"
                android:src="@drawable/default_avatar"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:shapeAppearanceOverlay="@style/circleStyle"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/personal_space" />

                <TextView
                    android:layout_width="120dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:paddingLeft="30dp"
                    android:text="@string/personal_item1"
                    android:textSize="24dp" />


                <ImageView
                    android:id="@+id/goto_space"
                    android:layout_width="50dp"
                    android:layout_height="match_parent"
                    android:clickable="true"
                    android:src="@drawable/goto_right" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/personal_contribution" />

                <TextView
                    android:layout_width="120dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:paddingLeft="30dp"
                    android:text="@string/personal_item2"
                    android:textSize="24dp" />


                <ImageView
                    android:id="@+id/goto_contribution"
                    android:layout_width="50dp"
                    android:layout_height="match_parent"
                    android:clickable="true"
                    android:src="@drawable/goto_right" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/personal_history" />

                <TextView
                    android:layout_width="120dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:paddingLeft="30dp"
                    android:text="@string/personal_item3"
                    android:textSize="24dp" />


                <ImageView
                    android:id="@+id/goto_history"
                    android:layout_width="50dp"
                    android:layout_height="match_parent"
                    android:clickable="true"
                    android:src="@drawable/goto_right" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/personal_setting" />

                <TextView
                    android:layout_width="120dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:paddingLeft="30dp"
                    android:text="@string/personal_item4"
                    android:textSize="24dp" />


                <ImageView
                    android:id="@+id/goto_setting"
                    android:layout_width="50dp"
                    android:layout_height="match_parent"
                    android:clickable="true"
                    android:src="@drawable/goto_right" />
            </LinearLayout>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>


</androidx.coordinatorlayout.widget.CoordinatorLayout>
